--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   get: ^4.6.5
   google_sign_in: ^5.4.0
   http: ^0.13.4
+  linear_step_indicator: ^1.0.0+3
+  status_change: ^2.0.0
 
 dev_dependencies:
   change_app_package_name: ^1.1.0
@@ -57,6 +59,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/account/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
