--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_card: ^1.1.7
   cloud_firestore: ^3.4.0
   cupertino_icons: ^1.0.2
   dropdown_button2: ^1.7.0
@@ -39,6 +40,7 @@ dependencies:
   get: ^4.6.5
   google_sign_in: ^5.4.0
   http: ^0.13.4
+  intl: ^0.17.0
   linear_step_indicator: ^1.0.0+3
   status_change: ^2.0.0
 
