--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get: ^4.6.5
   google_sign_in: ^5.4.0
   http: ^0.13.4
+  infinite_scroll_pagination: ^3.2.0
   intl: ^0.17.0
   linear_step_indicator: ^1.0.0+3
   status_change: ^2.0.0
