--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,24 +29,22 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   awesome_card: ^1.1.7
+  cached_network_image: ^3.2.1
   cloud_firestore: ^3.4.0
   cupertino_icons: ^1.0.2
   dropdown_button2: ^1.7.0
   firebase_auth: ^3.5.0
   firebase_core: ^1.20.0
+  firebase_messaging: ^12.0.2
   flutter:
     sdk: flutter
   flutter_svg: ^1.1.1+1
   get: ^4.6.5
   google_sign_in: ^5.4.0
   http: ^0.13.4
-  infinite_scroll_pagination: ^3.2.0
   intl: ^0.17.0
-  linear_step_indicator: ^1.0.0+3
-  status_change: ^2.0.0
 
 dev_dependencies:
-  change_app_package_name: ^1.1.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
