--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^3.4.0
   cupertino_icons: ^1.0.2
   dropdown_button2: ^1.7.0
+  firebase_analytics: ^9.3.1
   firebase_auth: ^3.5.0
   firebase_core: ^1.20.0
   firebase_messaging: ^12.0.2
@@ -43,6 +44,7 @@ dependencies:
   google_sign_in: ^5.4.0
   http: ^0.13.4
   intl: ^0.17.0
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
